--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.25",
     "mongoose": "^8.7.2",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-email": "^3.0.1",
+    "resend": "^4.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
