--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.7.2",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "next-auth": "^4.24.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-email": "^3.0.1",
     "resend": "^4.0.0",
     "zod": "^3.23.8"
