--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@google/generative-ai": "^0.21.0",
     "@react-email/components": "^0.0.25",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.453.0",
     "mongoose": "^8.7.2",
     "next": "15.0.1",
     "next-auth": "^4.24.10",
@@ -19,6 +22,8 @@
     "react-dom": "^18.3.1",
     "react-email": "^3.0.1",
     "resend": "^4.0.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
