--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "embla-carousel-autoplay": "^8.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "mongoose": "^8.7.2",
